Bug 326728 - Incorrect persistence root calculation for WARs
Changes the root calculation algorithm for WAR and JAR archives to produce the
result that correlates with the `descriptorLocation` parameter. The new algorithm
follows the link between `persistence.xml` and the persistence root rather
then the rigid list of possible cases in the JPA specification (8.2), which allows it
to handle some exotic cases. For example, given the input
`jar:file:/foo.jar!/bar/META-INF/persistence.xml`, the algorithm will produce root
`jar:file:/foo.jar!/bar`. This is useful for embedded servers (mainly Jetty), where
we wish to maintain separation between the server and application classes.

For `zip:...!/...` URLs the resulting root in such case will have the `jar:file:`
scheme. This allows us to leverage the existing JAR file tooling.